--- a/website/auth0.erb
+++ b/website/auth0.erb
@@ -23,7 +23,7 @@
           <a href="/docs/providers/auth0/r/connection.html">auth0_connection</a>
           </li>
           <li>
-            <a href="/docs/providers/auth0/r/custom_domain.html">auth0_custom_domain/a>
+            <a href="/docs/providers/auth0/r/custom_domain.html">auth0_custom_domain</a>
           </li>
           <li>
             <a href="/docs/providers/auth0/r/email_template.html">auth0_email_template</a>
