--- a/website/auth0.erb
+++ b/website/auth0.erb
@@ -17,6 +17,7 @@
             <li><a href="/docs/providers/auth0/r/role.html">auth0_role</a></li>
             <li><a href="/docs/providers/auth0/r/rule_config.html">auth0_rule_config</a></li>
             <li><a href="/docs/providers/auth0/r/rule.html">auth0_rule</a></li>
+            <li><a href="/docs/providers/auth0/r/hook.html">auth0_hook</a></li>
             <li><a href="/docs/providers/auth0/r/tenant.html">auth0_tenant</a></li>
             <li><a href="/docs/providers/auth0/r/user.html">auth0_user</a></li>
           </ul>
