auth0_branding: add docs

--- a/website/auth0.erb
+++ b/website/auth0.erb
@@ -21,6 +21,7 @@
             <li><a href="/docs/providers/auth0/r/prompt.html">auth0_prompt</a></li>
             <li><a href="/docs/providers/auth0/r/tenant.html">auth0_tenant</a></li>
             <li><a href="/docs/providers/auth0/r/user.html">auth0_user</a></li>
+            <li><a href="/docs/providers/auth0/r/branding.html">auth0_branding</a></li>
           </ul>
         </li>
       </ul>
