Support for verifying custom domains

--- a/website/auth0.erb
+++ b/website/auth0.erb
@@ -11,6 +11,7 @@
             <li><a href="/docs/providers/auth0/r/client.html">auth0_client</a></li>
             <li><a href="/docs/providers/auth0/r/connection.html">auth0_connection</a></li>
             <li><a href="/docs/providers/auth0/r/custom_domain.html">auth0_custom_domain</a></li>
+            <li><a href="/docs/providers/auth0/r/custom_domain_verification.html">auth0_custom_domain_verification</a></li>
             <li><a href="/docs/providers/auth0/r/email_template.html">auth0_email_template</a></li>
             <li><a href="/docs/providers/auth0/r/email.html">auth0_email</a></li>
             <li><a href="/docs/providers/auth0/r/resource_server.html">auth0_resource_server</a></li>
